# LabMec2025

./: README.md  Road Map  demo_world.sdf  frames_2025-06-14_00.53.38.gv  frames_2025-06-14_01.03.27.gv  frames_2025-06-14_01.08.56.gv  frames_2025-06-14_01.12.51.gv  model.sdf  model3.sdf  mybashrc
boat/: model.sdf  model3.config  model3.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/share/bluerov2_control/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/bluerov2_description/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/pose_to_tf/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/vrx_gazebo/: local_setup.sh  package.sh
install/share/vrx_gz/: local_setup.sh  package.sh
install/share/vrx_ros/: package.sh
install/share/wamv_description/: package.sh
install/share/wamv_gazebo/: local_setup.sh  package.sh
log/: latest_build
src/: boat_world.world
src/lidar_node/: package.xml  setup.py
src/lidar_node/config/: bridge.yaml
src/lidar_node/launch/: sim.launch.py
src/lidar_node/lidar_node/: lidar_sub.py  sub.py  sub_node.py
src/models/boat/: model.sdf  model3.sdf
src/models/lidar/: model.sdf
src/models/sensor_post/: model.sdf
src/models/wam-v/: model.sdf
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py
src/python_node/: package.xml  setup.py
src/python_node/python_node/:  CmdVelToWamv.py  CoastFollower.py  GuiTeleop.py  KeyboardTeleop.py  Odom2TF.py  PIDController.py  RLS.py  ThrusterController.py  WamvController.py  keyboard_teleop.py  odom_to_tf.py  pub_node.py  sub_node.py  thruster_guardian.py
src/vrx/: CMakeLists.txt  package.xml
src/vrx/hooks/: resource_paths.sh
src/vrx/launch/: mylaunch.py
src/vrx/worlds/: sydney.sdf
src/wamv_bringup/: local_setup.dsv  package.xml
src/wamv_gazebo/: CMakeLists.txt  package.xml
src/wamv_navigation/: CMakeLists.txt  local_setup.dsv  package.xml
src/wamv_navigation/cmake/: wamv_navigationConfig.cmake
src/wamv_navigation/config/: README.md  backpack_3d.lua  ekf.yaml  slam_toolbox_params.yaml  slam_toolbox_saved_map.yaml  wamv_config.yaml  wamv_mapping.lua
src/wamv_navigation/description/wam-v/: model.sdf  urdf_wamv.urdf
src/wamv_navigation/launch/: bringup_launch.py  cartographer.launch.py  cloned_multi_tb3_simulation_launch.py  display.launch.py  launch8.py  localization_launch.py  navigation_launch.py  occupancy_grid.launch.py  robot.launch.py  slam_launch.py  wamv_launch.py  wamv_localization.py  wamv_simulation.py
src/wamv_navigation/maps/: lake.yaml  sydney_map.pgm  sydney_map.yaml
src/wamv_navigation/models/: README.md
src/wamv_navigation/params/: nav2_params.yaml  wamv_nav2_params.yaml
src/wamv_navigation/rviz/: config.rviz  config2.rviz  config3.rviz  config4.rviz  wamv_cartographer.rviz  wamv_localization.rviz  wamv_navigation.rviz
src/wamv_navigation/urdf/: README.md  wamv_model.sdf
src/wamv_navigation/worlds/: README.md
src/worlds/: dave_bimanual_example.world  demo_world.sdf  myworld.sdf  sydney_regatta.sdf  wworld.sdf
(+1012 files in other folders)
